--- a/calendar.html
+++ b/calendar.html
@@ -18,86 +18,138 @@
               <li class="home"><a href="calendar.html">CALENDAR</a></li>
             </ul>
           </header>
-          <p>Move your <span class="cat"><img src="curser.png" alt="" class="cat"></span> aroud the page to see dates!</p>
+          <p>
+            Move your
+            <span class="cat"><img src="curser.png" alt="" class="cat" /></span>
+            aroud the page to see dates!
+          </p>
         </div>
       </div>
     </div>
     <div class="container listofcal">
       <div class="row">
-        <div class="col-12">
+        <div class="col-4">
           <ul class="list-cal">
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_10_2024-01-08_23-56-32.jpg" alt="" class="op1 bx1" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_10_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op1 bx1"
+                />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_11_2024-01-08_23-56-32.jpg" alt="" class="op2 bx2" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_11_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op2 bx2"
+                />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_1_2024-01-08_23-56-32.jpg" alt="" class="op3 bx3" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_1_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op3 bx3"
+                />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
+              <a class="link" href="#"
+                >2023/12/02
                 <img src="img/photo_2022-02-10.png" alt="" class="op4 bx4" />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_2_2024-01-08_23-56-32.jpg" alt="" class="op5 bx5" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_2_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op5 bx5"
+                />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_9_2024-01-08_23-56-32.jpg" alt="" class="op6 bx6" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_9_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op6 bx6"
+                />
               </a>
-
             </li>
-
+          </ul>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <ul class="list-cal">
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_3_2024-01-08_23-56-32.jpg" alt="" class="op7 bx7" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_3_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op7 bx7"
+                />
               </a>
-
-            </li>
-            <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_4_2024-01-08_23-56-32.jpg" alt="" class="op8 bx8" />
-              </a>
-
-            </li>
-            <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_5_2024-01-08_23-56-32.jpg" alt="" class="op9 bx9" />
-              </a>
-
-            </li>
-            <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_6_2024-01-08_23-56-32.jpg" alt="" class="op10 bx10" />
-              </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_7_2024-01-08_23-56-32.jpg" alt="" class="op11 bx11" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_4_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op8 bx8"
+                />
               </a>
-
             </li>
             <li class="list-cal">
-              <a class="link" href="#">2023/12/02
-                <img src="img/photo_8_2024-01-08_23-56-32.jpg" alt="" class="op12 bx12" />
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_5_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op9 bx9"
+                />
               </a>
-
+            </li>
+            <li class="list-cal">
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_6_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op10 bx10"
+                />
+              </a>
+            </li>
+            <li class="list-cal">
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_7_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op11 bx11"
+                />
+              </a>
+            </li>
+            <li class="list-cal">
+              <a class="link" href="#"
+                >2023/12/02
+                <img
+                  src="img/photo_8_2024-01-08_23-56-32.jpg"
+                  alt=""
+                  class="op12 bx12"
+                />
+              </a>
             </li>
           </ul>
         </div>
@@ -169,7 +221,6 @@
     <div class="imges option27 box13">
       <img src="img/photo_5_2024-01-08_23-56-32.jpg" alt="" class="op1 bx1" />
     </div> -->
-    
 
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
