--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="col-12">
           <header>
             <ul class="home">
+              <li class="home"><img class="icon" src="img/icon.png" alt=""></li>
               <li class="home"><a href="index.html">HOME</a></li>
               <li class="home"><a href="calendar.html">CALENDAR</a></li>
             </ul>
